--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -122,11 +122,6 @@
     }
   }
 
-  .page-header--inner.page-header--opened {
-    min-height: 642px;
-    background-position: 0 -780%;
-  }
-
   .no-js {
     .page-header {
       min-height: 1160px;
@@ -144,15 +139,18 @@
 
 @media (min-width: $tablet-width) {
   .page-header {
+    background-image: url("../img/index-bg.jpg");
+    background-position: 0 0;
+    background-size: 100% 100%;
 
     &--inner {
-      min-height: 250px;
-      background-position-y: 0;
+      background-image: url("../img/inner-bg.jpg");
+      background-position: 0 0;
+      background-size: 100% 100%;
     }
 
-    &--inner .page-header__container::after {
-      left: 20%;
-      height: 100%;
+    &--inner .page-header__logo {
+      min-height: 6vw;
     }
   }
 
@@ -169,9 +167,8 @@
 
   .page-header__logo {
     padding: 0;
-    padding-top: 5px;
     width: 17.5%;
-    min-height: none;
+    padding-top: 0.5vw;
   }
 
   .page-header__logo-img {
