--- a/source/sass/blocks/site-list.scss
+++ b/source/sass/blocks/site-list.scss
@@ -12,7 +12,7 @@
 }
 
 .site-list__link {
-  font-size: 1.3vw;
+  font-size: 4vw;
   font-family: $myriadpro;
   line-height: 2.85;
   text-transform: uppercase;
@@ -24,41 +24,9 @@
   &:active {
     opacity: 0.5;
   }
-}
-
-.site-list__toggle {
-  width: 10px;
-  height: 10px;
-  padding: 0;
-  margin: 0;
-  margin-top: 10px;
-  background-color: transparent;
-  border: 2px solid #ffffff;
-  border-top: none;
-  border-left: none;
-  margin-left: 15px;
-  -webkit-transform: rotate(45deg);
-  transform: rotate(45deg);
-  position: absolute;
-  right: 0;
 
   &--active {
-    border: 2px solid #ffffff;
-    border-right: none;
-    border-bottom: none;
-    opacity: 0.5;
-    margin-top: 16px;
-  }
-}
-
-.site-list__toggle--active ~ .sub-nav {
-  display: block;
-}
-
-
-@media (max-width: $until-tablet-width) {
-  .no-js .site-list__item-list {
-    display: block;
+    color: $gray;
   }
 }
 
@@ -79,28 +47,6 @@
 
   .site-list__link {
     word-wrap: break-word;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .site-list__item--active .site-list__link {
-    opacity: 0.5;
-  }
-
-  .site-list__item--active .site-list__toggle {
-    opacity: 0.5;
-    border: 2px solid #ffffff;
-    border-right: none;
-    border-bottom: none;
-    opacity: 0.5;
-    top: 6px;
-  }
-
-  .site-list__item--active .sub-nav {
-    display: block;
-    position: absolute;
-    top: 20px;
-    left: 0;
-    width: max-content;
+    font-size: 1.3vw;
   }
 }
