--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -17,4 +17,8 @@
 @import "blocks/company-info.scss";
 @import "blocks/partners.scss";
 @import "blocks/page-footer.scss";
-
+@import "blocks/slider.scss";
+@import "blocks/catalog.scss";
+@import "blocks/catalog-card.scss";
+@import "blocks/popup.scss";
+@import "blocks/overlay.scss";
