--- a/source/sass/blocks/promo-quality.scss
+++ b/source/sass/blocks/promo-quality.scss
@@ -1,14 +1,14 @@
-.promo-quantity {
+.promo-quality {
   background-color: #cd4e47;
 }
 
-.promo-quantity__container {
+.promo-quality__container {
   @include container;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
   min-height: 50vw;
-  background-image: url('../img/ribbon.png'), url('../img/quantity-bg.jpg');
+  background-image: url('../img/ribbon.png'), url('../img/quality-bg.jpg');
   background-size: 50vw 70%, cover;
   background-repeat: no-repeat, no-repeat;
   background-position: 50% 0, 0 0;
@@ -16,10 +16,10 @@
   padding-bottom: 20px;
 }
 
-.promo-quantity__title {
+.promo-quality__title {
   margin: 0;
   font-family: $ptsans-bold;
-  font-size: 4.6vw;
+  font-size: 8vw;
   line-height: 0.82;
   color: #ffffff;
   font-weight: 700;
@@ -31,26 +31,30 @@
   }
 }
 
-.promo-quantity__text {
+.promo-quality__text {
   color: #ffffff;
-  font-size: 1.5vw;
+  font-size: 4vw;
   line-height: 1.27;
   margin: 0;
 }
 
 @media (min-width: $desktop-width) {
-  .promo-quantity {
+  .promo-quality {
     width: 38.5%;
   }
 
-  .promo-quantity__container {
+  .promo-quality__container {
     padding: 50px 8%;
     min-height: 30.5vw;
     background-size: 25vw 70%, cover;
     background-position: 50% 0, 0 0;
   }
 
-  .promo-quantity__title {
+  .promo-quality__title {
     font-size: 3.8vw;
+  }
+
+  .promo-quality__text {
+    font-size: 1.45vw;
   }
 }
