--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -1,8 +1,7 @@
 .page-footer {
   background-color: #5eb8ac;
   font-family:  $circe;
-  box-shadow: inset 0 1vw 5vw -0.5vw rgba(1, 1, 1, 0.58),
-  inset 0 -2vw 5vw -0.5vw rgba(1, 1, 1, 0.58);
+  background-image: (to bottom, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 30%,rgba(0,0,0,0) 36%,rgba(0,0,0,0) 41%,rgba(0,0,0,0) 47%,rgba(0,0,0,0) 55%,rgba(0,0,0,0) 66%,rgba(0,0,0,0.02) 70%,rgba(0,0,0,0.18) 99%,rgba(0,0,0,0.19) 100%);
 }
 
 .page-footer__container {
@@ -53,7 +52,7 @@
 
 .page-footer__copyright-text {
   margin: 0;
-  font-size: 1.3vw;
+  font-size: 5vw;
   line-height: 1.1;
   color: #ffffff;
   margin-bottom: 3vw;
@@ -116,8 +115,9 @@
 
 .page-footer__development-text {
   margin: 0;
-  font-size: 1.3vw;
+  font-size: 5vw;
   line-height: 1.2;
+  text-align: center;
 
   & br {
     display: none;
@@ -150,7 +150,7 @@
   }
 
   .page-footer__social {
-    width: 25%;
+    width: 35%;
     margin-bottom:  0;
   }
 
@@ -158,11 +158,6 @@
     @include list-reset;
     display: flex;
     justify-content: flex-start;
-  }
-
-  .page-footer__social-item {
-    width: 3.5vw;
-    height: 3.5vw;
   }
 
   .page-footer__development-link {
@@ -173,10 +168,31 @@
     width: 18%;
     align-items: flex-start;
   }
+
+  .page-footer__development-text {
+    text-align: left;
+  }
 }
 
 @media (min-width: $desktop-width) {
   .page-footer__wrapper {
     width: 20%;
+  }
+
+  .page-footer__copyright-text {
+    font-size: 1.3vw;
+  }
+
+  .page-footer__social {
+    width: 25%;
+  }
+
+  .page-footer__social-item {
+    width: 3.5vw;
+    height: 3.5vw;
+  }
+
+  .page-footer__development-text {
+    font-size: 1.3vw;
   }
 }
