--- a/source/sass/blocks/promo-video.scss
+++ b/source/sass/blocks/promo-video.scss
@@ -5,12 +5,6 @@
 
 @media (min-width: $tablet-width) {
   .promo-video {
-    margin-top: -110px;
-  }
-}
-
-@media (min-width: $desktop-width) {
-  .promo-video {
-    margin-top: -110px;
+    margin-top: -7.3vw;
   }
 }
