--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,7 @@
 @import "blocks/page-main.scss";
 @import "blocks/promo-catalog.scss";
 @import "blocks/btn.scss";
-@import "blocks/promo-quantity.scss";
+@import "blocks/promo-quality.scss";
 @import "blocks/social.scss";
 @import "blocks/slider.scss";
 @import "blocks/company-info.scss";
@@ -22,3 +22,7 @@
 @import "blocks/catalog-card.scss";
 @import "blocks/popup.scss";
 @import "blocks/overlay.scss";
+@import "blocks/quality.scss";
+@import "blocks/certificates.scss";
+@import "blocks/contacts.scss";
+@import "blocks/contacts-form.scss";
