--- a/source/sass/blocks/contacts-form.scss
+++ b/source/sass/blocks/contacts-form.scss
@@ -5,6 +5,7 @@
   @include container;
   background-color: #fd7b26;
   padding-bottom: 30px;
+  background-image: url("../img/contacts-form.png");
 }
 
 .contacts-form__title {
@@ -22,9 +23,9 @@
 
 .contacts-form__field {
   background-color: #ffffff;
-  border: none;
+  border: 1px solid #ffffff;
   font-size: 17px;
-  padding: 17px 21px 15px 21px;
+  padding: 16px 20px 14px 20px;
   height: 50px;
   box-sizing: border-box;
   margin: 0;
@@ -38,7 +39,14 @@
   &--textarea {
     min-height: 116px;
   }
+
+  &:hover,
+  &:active,
+  &:focus {
+    border: 1px solid $green;
+  }
 }
+
 
 .contacts-form__btn {
   margin-top: 15px;
@@ -76,6 +84,7 @@
 
   .contacts-form__field {
     margin-bottom: 0;
+    border: 0.06vw solid #ffffff;
     min-height: 3.3vw;
     font-size: 1.19vw;
     border-radius: 0.6vw;
@@ -88,6 +97,12 @@
     &--textarea {
       width: 100%;
       min-height: 100%;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+      border: 0.06vw solid $green;
     }
   }
 
