--- a/source/sass/blocks/promo-catalog.scss
+++ b/source/sass/blocks/promo-catalog.scss
@@ -31,6 +31,12 @@
   & a {
     color: inherit;
   }
+
+  & a:hover,
+  & a:focus,
+  & a:active {
+    opacity: 0.5;
+  }
 }
 
 .promo-catalog__text {
