--- a/source/sass/blocks/promo-quality.scss
+++ b/source/sass/blocks/promo-quality.scss
@@ -29,6 +29,12 @@
   & a {
     color: inherit;
   }
+
+  & a:hover,
+  & a:focus,
+  & a:active {
+    opacity: 0.5;
+  }
 }
 
 .promo-quality__text {
