--- a/source/sass/blocks/promo-video.scss
+++ b/source/sass/blocks/promo-video.scss
@@ -5,6 +5,12 @@
 
 @media (min-width: $tablet-width) {
   .promo-video {
-    margin-top: -7.3vw;
+    margin-top: -110px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .promo-video {
+    margin-top: -8.1vw;
   }
 }
