--- a/source/sass/blocks/company-info.scss
+++ b/source/sass/blocks/company-info.scss
@@ -16,14 +16,14 @@
 
 .company-info__title {
   margin: 0;
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 0.88;
   color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
-  font-family: $myriadpro-bold;
+  font-family: $ptsans-bold;
   padding-top: 4vw;
-  margin-bottom: 1.5vw;
+  margin-bottom: 3.5vw;
 
   & a {
     color: inherit;
