--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -2,6 +2,7 @@
   background-color: #5eb8ac;
   font-family:  $circe;
   background-image: linear-gradient(to bottom, rgba(0,0,0,0.2) 0%,rgba(0,0,0,0) 30%,rgba(0,0,0,0) 36%,rgba(0,0,0,0) 41%,rgba(0,0,0,0) 47%,rgba(0,0,0,0) 55%,rgba(0,0,0,0) 66%,rgba(0,0,0,0.02) 70%,rgba(0,0,0,0.18) 99%,rgba(0,0,0,0.19) 100%);
+  padding: 20px 0;
 }
 
 .page-footer__container {
@@ -51,11 +52,10 @@
 }
 
 .page-footer__copyright-text {
-  margin: 0;
-  font-size: 5vw;
+  margin: 2vw 0 6vw 0;
+  font-size: 4.5vw;
   line-height: 1.1;
   color: #ffffff;
-  margin-bottom: 3vw;
 }
 
 .page-footer__social {
@@ -122,7 +122,7 @@
 
 .page-footer__development-text {
   margin: 0;
-  font-size: 5vw;
+  font-size: 4.5vw;
   line-height: 1.2;
   text-align: center;
 
