--- a/source/sass/blocks/promo-quality.scss
+++ b/source/sass/blocks/promo-quality.scss
@@ -7,9 +7,9 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
-  min-height: 50vw;
-  background-image: url('../img/ribbon.png'), url('../img/quality-bg.jpg');
-  background-size: 50vw 70%, cover;
+  min-height: 60vw;
+  background-image: url('/img/ribbon.png'), url('/img/quality-bg.jpg');
+  background-size: 50vw 70%, 100%;
   background-repeat: no-repeat, no-repeat;
   background-position: 50% 0, 0 0;
   padding-top: 20px;
@@ -19,12 +19,13 @@
 .promo-quality__title {
   margin: 0;
   font-family: $ptsans-bold;
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 0.82;
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 1vw;
+  margin-bottom: 2vw;
+  text-align: center;
 
   & a {
     color: inherit;
@@ -42,6 +43,7 @@
   font-size: 4vw;
   line-height: 1.27;
   margin: 0;
+  text-align: center;
 }
 
 @media (min-width: $desktop-width) {
@@ -58,9 +60,11 @@
 
   .promo-quality__title {
     font-size: 3.8vw;
+    text-align: left;
   }
 
   .promo-quality__text {
     font-size: 1.45vw;
+    text-align: left;
   }
 }
