--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -14,31 +14,33 @@
 
 .social__title {
   margin: 0;
-  font-size: 6vw;
+  font-size: 7vw;
   line-height: 1.24;
   color: $gray;
   text-transform: uppercase;
   font-weight: 700;
   font-family: $ptsans-bold;
-  margin-bottom: 0.5vw;
+  margin-bottom: 2vw;
+  text-align: center;
 }
 
 .social__text {
   color: #ae944e;
-  font-size: 4vw;
+  font-size: 5vw;
   line-height: 1.27;
-  width: 50%;
   font-family: $circe;
   margin: 0;
-  margin-bottom: 3vw;
+  margin-bottom: 6vw;
+  text-align: center;
 }
 
 .social__list {
   @include list-reset;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: stretch;
+  width: 299px;
 }
 
 .social__item {
@@ -46,6 +48,8 @@
   flex-direction: column;
   align-items: center;
   margin-bottom: 2vw;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
 
 .social__link {
