--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -70,20 +70,18 @@
 }
 
 .page-footer__social-item {
+  margin-right: 2%;
+}
+
+.page-footer__social-link {
   width: 7vw;
   height: 7vw;
   display: block;
   border-radius: 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-right: 2%;
   cursor: pointer;
-
-  &:hover,
-  &:focus,
-  &:active {
-    opacity: 0.5;
-  }
+  position: relative;
 
   &--vk {
     background-image: url('../img/icon-vk.png');
@@ -99,6 +97,24 @@
 
   &--inst {
     background-image: url('../img/icon-inst.png');
+  }
+
+  &:hover::before,
+  &:focus::before {
+    width: 7vw;
+    height: 7vw;
+    border-radius: 50%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    opacity: 0.2;
+    z-index: 2;
+  }
+
+  &:active {
+    box-shadow: inset 0 6px 0 0 rgba(1, 1, 1, 0.25);
   }
 }
 
@@ -194,9 +210,15 @@
     width: 25%;
   }
 
-  .page-footer__social-item {
+  .page-footer__social-link {
     width: 3.5vw;
     height: 3.5vw;
+
+    &:hover::before,
+    &:focus::before {
+      width: 3.5vw;
+      height: 3.5vw;
+    }
   }
 
   .page-footer__development-text {
