--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1531,24 +1531,39 @@ label.visually-hidden:active {
   justify-content: center; }
 
 .page-footer__social-item {
+  margin-right: 2%; }
+
+.page-footer__social-link {
   width: 7vw;
   height: 7vw;
   display: block;
   border-radius: 50%;
   background-size: cover;
   background-repeat: no-repeat;
-  margin-right: 2%;
-  cursor: pointer; }
-  .page-footer__social-item:hover, .page-footer__social-item:focus, .page-footer__social-item:active {
-    opacity: 0.5; }
-  .page-footer__social-item--vk {
+  cursor: pointer;
+  position: relative; }
+  .page-footer__social-link--vk {
     background-image: url("../img/icon-vk.png"); }
-  .page-footer__social-item--fb {
+  .page-footer__social-link--fb {
     background-image: url("../img/icon-fb.png"); }
-  .page-footer__social-item--youtube {
+  .page-footer__social-link--youtube {
     background-image: url("../img/icon-youtube.png"); }
-  .page-footer__social-item--inst {
+  .page-footer__social-link--inst {
     background-image: url("../img/icon-inst.png"); }
+  .page-footer__social-link:hover::before, .page-footer__social-link:focus::before {
+    width: 7vw;
+    height: 7vw;
+    border-radius: 50%;
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    opacity: 0.2;
+    z-index: 2; }
+  .page-footer__social-link:active {
+    -webkit-box-shadow: inset 0 6px 0 0 rgba(1, 1, 1, 0.25);
+    box-shadow: inset 0 6px 0 0 rgba(1, 1, 1, 0.25); }
 
 .page-footer__development {
   width: 100%;
@@ -1634,9 +1649,12 @@ label.visually-hidden:active {
     font-size: 1.3vw; }
   .page-footer__social {
     width: 25%; }
-  .page-footer__social-item {
+  .page-footer__social-link {
     width: 3.5vw;
     height: 3.5vw; }
+    .page-footer__social-link:hover::before, .page-footer__social-link:focus::before {
+      width: 3.5vw;
+      height: 3.5vw; }
   .page-footer__development-text {
     font-size: 1.3vw; } }
 
