--- a/source/css/style.css
+++ b/source/css/style.css
@@ -307,37 +307,38 @@ template {
   font-display: swap;
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/Circe-Regular.woff2") format("woff2"), url("../fonts/Circe-Regular.woff") format("woff"); }
+  src: url("/fonts/Circe-Regular.woff2") format("woff2"), url("/fonts/Circe-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "MyriadPro-Bold";
   font-display: swap;
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/MyriadPro-Bold.woff2") format("woff2"), url("../fonts/MyriadPro-Bold.woff") format("woff"); }
+  src: url("/fonts/MyriadPro-Bold.woff2") format("woff2"), url("/fonts/MyriadPro-Bold.woff") format("woff"); }
 
 @font-face {
   font-family: "MyriadPro-Regular";
   font-display: swap;
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/MyriadPro-Regular.woff2") format("woff2"), url("../fonts/MyriadPro-Regular.woff") format("woff"); }
+  src: url("/fonts/MyriadPro-Regular.woff2") format("woff2"), url("/fonts/MyriadPro-Regular.woff") format("woff"); }
 
 @font-face {
   font-family: "PTSans-Bold";
   font-display: swap;
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/PTSans-Bold.woff2") format("woff2"), url("../fonts/PTSans-Bold.woff") format("woff"); }
+  src: url("/fonts/PTSans-Bold.woff2") format("woff2"), url("/fonts/PTSans-Bold.woff") format("woff"); }
 
 @font-face {
   font-family: "PTSans-Regular";
   font-display: swap;
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/PTSans-Regular.woff2") format("woff2"), url("../fonts/PTSans-Regular.woff") format("woff"); }
+  src: url("/fonts/PTSans-Regular.woff2") format("woff2"), url("/fonts/PTSans-Regular.woff") format("woff"); }
 
 body {
+  font-family: "PTSans-Regular", "Arial", sans-serif;
   min-width: 320px;
   margin: 0 auto;
   font-weight: 400;
@@ -845,9 +846,25 @@ label.visually-hidden:active {
     word-wrap: break-word;
     font-size: 1.3vw; } }
 
+.promo-video__video-responsive {
+  width: 100%; }
+
+.promo-video__video-start,
+.promo-video__video-end,
 .promo-video__canvas {
+  height: auto;
   width: 100%;
+  min-height: 50vw; }
+
+.promo-video__canvas {
   display: block; }
+
+.promo-video__video-start,
+.promo-video__video-end {
+  display: none; }
+  .promo-video__video-start--active,
+  .promo-video__video-end--active {
+    display: block; }
 
 @media (min-width: 750px) {
   .promo-video {
@@ -881,8 +898,8 @@ label.visually-hidden:active {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  min-height: 50vw;
-  background-image: url("../img/catalog-bg.png");
+  min-height: 60vw;
+  background-image: url("/img/catalog-bg.png");
   background-size: auto;
   background-size: 50vw 90%;
   background-repeat: no-repeat;
@@ -892,14 +909,14 @@ label.visually-hidden:active {
 
 .promo-catalog__title {
   margin: 0;
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 0.82;
   color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
   font-family: "PTSans-Bold", "Arial", sans-serif;
   display: block;
-  margin-bottom: 2vw; }
+  margin-bottom: 4vw; }
   .promo-catalog__title a {
     color: inherit; }
   .promo-catalog__title a:hover,
@@ -991,9 +1008,9 @@ label.visually-hidden:active {
   -webkit-box-pack: end;
   -ms-flex-pack: end;
   justify-content: flex-end;
-  min-height: 50vw;
-  background-image: url("../img/ribbon.png"), url("../img/quality-bg.jpg");
-  background-size: 50vw 70%, cover;
+  min-height: 60vw;
+  background-image: url("/img/ribbon.png"), url("/img/quality-bg.jpg");
+  background-size: 50vw 70%, 100%;
   background-repeat: no-repeat, no-repeat;
   background-position: 50% 0, 0 0;
   padding-top: 20px;
@@ -1002,12 +1019,13 @@ label.visually-hidden:active {
 .promo-quality__title {
   margin: 0;
   font-family: "PTSans-Bold", "Arial", sans-serif;
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 0.82;
   color: #ffffff;
   font-weight: 700;
   text-transform: uppercase;
-  margin-bottom: 1vw; }
+  margin-bottom: 2vw;
+  text-align: center; }
   .promo-quality__title a {
     color: inherit; }
   .promo-quality__title a:hover,
@@ -1019,7 +1037,8 @@ label.visually-hidden:active {
   color: #ffffff;
   font-size: 4vw;
   line-height: 1.27;
-  margin: 0; }
+  margin: 0;
+  text-align: center; }
 
 @media (min-width: 1100px) {
   .promo-quality {
@@ -1030,9 +1049,11 @@ label.visually-hidden:active {
     background-size: 25vw 70%, cover;
     background-position: 50% 0, 0 0; }
   .promo-quality__title {
-    font-size: 3.8vw; }
+    font-size: 3.8vw;
+    text-align: left; }
   .promo-quality__text {
-    font-size: 1.45vw; } }
+    font-size: 1.45vw;
+    text-align: left; } }
 
 .social {
   background-color: #feebb9; }
@@ -1058,22 +1079,23 @@ label.visually-hidden:active {
 
 .social__title {
   margin: 0;
-  font-size: 6vw;
+  font-size: 7vw;
   line-height: 1.24;
   color: #474d52;
   text-transform: uppercase;
   font-weight: 700;
   font-family: "PTSans-Bold", "Arial", sans-serif;
-  margin-bottom: 0.5vw; }
+  margin-bottom: 2vw;
+  text-align: center; }
 
 .social__text {
   color: #ae944e;
-  font-size: 4vw;
+  font-size: 5vw;
   line-height: 1.27;
-  width: 50%;
   font-family: "Circe-Regular", "Arial", sans-serif;
   margin: 0;
-  margin-bottom: 3vw; }
+  margin-bottom: 6vw;
+  text-align: center; }
 
 .social__list {
   margin: 0;
@@ -1082,16 +1104,17 @@ label.visually-hidden:active {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: vertical;
+  -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center; }
+  -webkit-box-align: stretch;
+  -ms-flex-align: stretch;
+  align-items: stretch;
+  width: 299px; }
 
 .social__item {
   display: -webkit-box;
@@ -1104,7 +1127,9 @@ label.visually-hidden:active {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  margin-bottom: 2vw; }
+  margin-bottom: 2vw;
+  margin-left: 1vw;
+  margin-right: 1vw; }
 
 .social__link {
   width: 20vw;
@@ -1262,14 +1287,14 @@ label.visually-hidden:active {
 
 .company-info__title {
   margin: 0;
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 0.88;
   color: #ffffff;
   text-transform: uppercase;
   font-weight: 700;
-  font-family: "MyriadPro-Bold", "Arial", sans-serif;
+  font-family: "PTSans-Bold", "Arial", sans-serif;
   padding-top: 4vw;
-  margin-bottom: 1.5vw; }
+  margin-bottom: 3.5vw; }
   .company-info__title a {
     color: inherit; }
 
@@ -1360,7 +1385,8 @@ label.visually-hidden:active {
 .partners {
   background-color: #f1f5f6;
   -webkit-box-shadow: inset 0 1vw 4vw -0.5vw rgba(1, 1, 1, 0.58);
-  box-shadow: inset 0 1vw 4vw -0.5vw rgba(1, 1, 1, 0.58); }
+  box-shadow: inset 0 1vw 4vw -0.5vw rgba(1, 1, 1, 0.58);
+  padding: 0 10vw; }
 
 .partners__container {
   -webkit-box-sizing: border-box;
@@ -1384,7 +1410,7 @@ label.visually-hidden:active {
 
 .partners__title {
   margin: 0;
-  font-size: 8vw;
+  font-size: 7vw;
   line-height: 0.88;
   color: #474d52;
   text-transform: uppercase;
@@ -1450,7 +1476,8 @@ label.visually-hidden:active {
   background-color: #5eb8ac;
   font-family: "Circe-Regular", "Arial", sans-serif;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.2)), color-stop(30%, rgba(0, 0, 0, 0)), color-stop(36%, rgba(0, 0, 0, 0)), color-stop(41%, rgba(0, 0, 0, 0)), color-stop(47%, rgba(0, 0, 0, 0)), color-stop(55%, rgba(0, 0, 0, 0)), color-stop(66%, rgba(0, 0, 0, 0)), color-stop(70%, rgba(0, 0, 0, 0.02)), color-stop(99%, rgba(0, 0, 0, 0.18)), to(rgba(0, 0, 0, 0.19)));
-  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 36%, rgba(0, 0, 0, 0) 41%, rgba(0, 0, 0, 0) 47%, rgba(0, 0, 0, 0) 55%, rgba(0, 0, 0, 0) 66%, rgba(0, 0, 0, 0.02) 70%, rgba(0, 0, 0, 0.18) 99%, rgba(0, 0, 0, 0.19) 100%); }
+  background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2) 0%, rgba(0, 0, 0, 0) 30%, rgba(0, 0, 0, 0) 36%, rgba(0, 0, 0, 0) 41%, rgba(0, 0, 0, 0) 47%, rgba(0, 0, 0, 0) 55%, rgba(0, 0, 0, 0) 66%, rgba(0, 0, 0, 0.02) 70%, rgba(0, 0, 0, 0.18) 99%, rgba(0, 0, 0, 0.19) 100%);
+  padding: 20px 0; }
 
 .page-footer__container {
   -webkit-box-sizing: border-box;
@@ -1509,11 +1536,10 @@ label.visually-hidden:active {
   opacity: 0.5; }
 
 .page-footer__copyright-text {
-  margin: 0;
-  font-size: 5vw;
+  margin: 2vw 0 6vw 0;
+  font-size: 4.5vw;
   line-height: 1.1;
-  color: #ffffff;
-  margin-bottom: 3vw; }
+  color: #ffffff; }
 
 .page-footer__social {
   width: 100%;
@@ -1587,7 +1613,7 @@ label.visually-hidden:active {
 
 .page-footer__development-text {
   margin: 0;
-  font-size: 5vw;
+  font-size: 4.5vw;
   line-height: 1.2;
   text-align: center; }
   .page-footer__development-text br {
